@@ -22,6 +22,11 @@
   * None encountered to date but theoretically possible
 - Improves Generic Menu Handling
   * Now provides a `Return to Main Menu` option on all such menus
+- Exposes `MitigatePrimedBuffer` Feature for User Configuration
+  * Previously activated by default on all types of firmware
+  * A limited base implementation is always active on Non-Apple firmware
+  * Can now be extended on by activating a new `mitigate_primed_buffer` token
+  * The feature does not operate on Apple firwmare regardless of the token setting
 
 
 0.13.3.AD (07 Mar 23):
